force-app/main/default/objects/Badge__c/fields/Badge_Type__c.field-meta.xml
<CustomField>
    <fullName>Badge_Type__c</fullName>
    <label>Badge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Contribution</fullName>
            </value>
            <value>
                <fullName>Top Contributor</fullName>
            </value>
            <value>
                <fullName>Bug Hunter</fullName>
            </value>
            <value>
                <fullName>Documentation Hero</fullName>
            </value>
            <value>
                <fullName>Code Reviewer</fullName>
            </value>
            <value>
                <fullName>Open Source Champion</fullName>
            </value>
            <value>
                <fullName>Mentor Choice</fullName>
            </value>
            <value>
                <fullName>Community Helper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>