force-app/main/default/objects/Badge__c/fields/Contributor__c.field-meta.xml
<CustomField>
    <fullName>Contributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contributor</label>
    <referenceTo>Contributor__c</referenceTo>
    <relationshipLabel>Badges</relationshipLabel>
    <relationshipName>Badges</relationshipName>
    <type>Lookup</type>
</CustomField>