force-app/main/default/objects/Badge__c/fields/Issued_By__c.field-meta.xml
<CustomField>
    <fullName>Issued_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issued By</label>
    <referenceTo>Mentor__c</referenceTo>
    <relationshipLabel>Badges</relationshipLabel>
    <relationshipName>Badges</relationshipName>
    <type>Lookup</type>
</CustomField>